added reflection-config.json